--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -22,11 +22,11 @@
         <header>
             <center>
                 <!-- place navbar here -->
-                <nav>
+                <nav class="text-white bg-danger">
                 <!-- Nav tabs -->
-                <a class="navbar-brand float-start" href="#">
+                <div class="navbar-brand float-start">
                     <img src="FrisbeeLogo.jpg" alt="Frisbee Logo" width="39" height="39" >
-                </a>
+                </div>
                 <ul
                     class="nav nav-tabs justify-content-center"
                     id="navId"
@@ -36,7 +36,7 @@
                     <li class="nav-item">
                         <a
                             href="#tab1Id"
-                            class="nav-link active"
+                            class="nav-link active fw-bold"
                             data-bs-toggle="tab"
                             aria-current="page"
                             >Frisbee Home Page</a
@@ -44,7 +44,7 @@
                     </li>
                     <li class="nav-item dropdown">
                         <a
-                            class="nav-link dropdown-toggle"
+                            class="nav-link dropdown-toggle fw-bold"
                             data-bs-toggle="dropdown"
                             href="#"
                             role="button"
@@ -60,17 +60,17 @@
                         </div>
                     </li>
                     <li class="nav-item" role="presentation">
-                        <a href="#tab5Id" class="nav-link" data-bs-toggle="tab"
+                        <a href="#tab5Id" class="nav-link fw-bold" data-bs-toggle="tab"
                             >Frisbee Events</a
                         >
                     </li>
                     <li class="nav-item" role="presentation">
-                        <a href="#tab5Id" class="nav-link" data-bs-toggle="tab"
+                        <a href="#tab5Id" class="nav-link fw-bold" data-bs-toggle="tab"
                             >Photo Gallary</a
                         >
                     </li>
                     <li class="nav-item" role="presentation">
-                        <a href="#tab5Id" class="nav-link" data-bs-toggle="tab"
+                        <a href="#tab5Id" class="nav-link fw-bold" data-bs-toggle="tab"
                             >Matriculation</a
                         >
                     </li>
@@ -98,30 +98,135 @@
              <rl></rl>
         </header>
         <main>
-            b5 <div class="card-group">
-                <div class="card">
+            <br>
+             <div class="card-group">
+                &nbsp;&nbsp;
+                <div class="card text-white bg-info shadow-lg"
+                >
                     <img
-                        class="card-img-top"
-                        src="holder.js/100x180/"
+                        class="card-img"
+                        src="cardIMG2.jpg"
                         alt="Card image cap"
+                        height="225x"
                     />
-                    <div class="card-body">
-                        <h4 class="card-title">Title</h4>
-                        <p class="card-text">Text</p>
+                    <div class="card-body ">
+                        <h4 class="card-title font-weight-bold">Our Co-Presadent</h4>
+                        <p class="card-text fst-italic">Robert</p>
                     </div>
                 </div>
-                <div class="card">
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <div class="card text-white bg-info shadow-lg">
                     <img
-                        class="card-img-top"
-                        src="holder.js/100x180/"
+                        class="card-img"
+                        src="cardIMG3.jpg"
                         alt="Card image cap"
+                        height="225x"
                     />
                     <div class="card-body">
-                        <h4 class="card-title">Title</h4>
-                        <p class="card-text">Text</p>
+                        <h4 class="card-title font-weight-bold">Our Men's Captin</h4>
+                        <p class="card-text fst-italic">Lewis</p>
                     </div>
                 </div>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <div class="card text-white bg-info shadow-lg">
+                    <img
+                        class="card-img"
+                        src="cardIMG4.jpg"
+                        alt="Card image cap"
+                        height="225x"
+                    />
+                    <div class="card-body">
+                        <h4 class="card-title font-weight-bold">Our Secretary</h4>
+                        <p class="card-text fst-italic">Sarah</p>
+                    </div>
+                </div>
+                &nbsp;&nbsp;
             </div>
+                            <!-- Carousel -->
+                            
+            <br><br><br>
+            <center>
+                <div class="col-md-6 col-12">
+                    &nbsp;&nbsp;&nbsp;
+                    <div id="carouselId" class="carousel slide" data-bs-ride="carousel">
+                        <ol class="carousel-indicators">
+                            <li
+                                data-bs-target="#carouselId"
+                                data-bs-slide-to="0"
+                                class="active"
+                                aria-current="true"
+                                aria-label="First slide"
+                            ></li>
+                            <li
+                                data-bs-target="#carouselId"
+                                data-bs-slide-to="1"
+                                aria-label="Second slide"
+                            ></li>
+                            <li
+                                data-bs-target="#carouselId"
+                                data-bs-slide-to="2"
+                                aria-label="Third slide"
+                            ></li>
+                        </ol>
+                        <div class="carousel-inner" role="listbox">
+                            <div class="carousel-item active">
+                                <img
+                                    src="CIMG1.jpg"
+                                    class="w-100 d-block"
+                                    alt="First slide"
+                                />
+                                <div class="carousel-caption d-none d-md-block">
+                                    <h3>Traditinal catch</h3>
+                                    <p>You catch the frisbee with two hands</p>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img
+                                    src="CIMG2.jpg"
+                                    class="w-100 d-block"
+                                    alt="Second slide"
+                                />
+                                <div class="carousel-caption d-none d-md-block">
+                                    <h3>Frisbee Crash</h3>
+                                    <p>Our player is catching the frisbee then jumping into the end zone</p>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img
+                                    src="CIMG3.jpg"
+                                    class="w-100 d-block"
+                                    alt="Third slide"
+                                />
+                                <div class="carousel-caption d-none d-md-block">
+                                    <h3>A layout</h3>
+                                    <p>Our player is diving to catch the frisbee</p>
+                                </div>
+                            </div>
+                        </div>
+                        <button
+                            class="carousel-control-prev"
+                            type="button"
+                            data-bs-target="#carouselId"
+                            data-bs-slide="prev"
+                        >
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button
+                            class="carousel-control-next"
+                            type="button"
+                            data-bs-target="#carouselId"
+                            data-bs-slide="next"
+                        >
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                        </button>
+                    </div>
+                </div>
+             </center>
+            &nbsp;&nbsp;&nbsp;
+
+            <br><br><br>
             
         </main>
         <footer>
